added julia build files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ PhyloNetworks.jl-master/*
 condor/condor_logs/*
 condor/.bash_history
 condor/julia-1.9.3-linux-x86_64.tar.gz
+condor/julia-1.9.3/*
