added transfer-files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,4 @@ PhyloNetworks.jl-master/*
 # Condor logs & large files
 condor/condor_logs/*
 condor/.bash_history
-condor/julia-1.9.3-linux-x86_64.tar.gz
-condor/julia-1.9.3/*
+condor/transfer-files/*
